<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/modelImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/first"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="55dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/belt_suit_blazer"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lines="1"/>

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_120"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:lines="1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>









