<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/all"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="28dp"
                android:background="@drawable/round"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/party"
                android:layout_width="116dp"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/round_color"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/party"
                    android:contentDescription="@string/party" />

                <TextView
                    android:layout_width="53dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/party"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/camping"
                android:layout_width="139dp"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/round_color"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/camping"
                    android:contentDescription="@string/camping" />

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/camping"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/category1"
                android:layout_width="139dp"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/round_color"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/camping"
                    android:contentDescription="@string/category1" />

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/category1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/category2"
                android:layout_width="139dp"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/round_color"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/camping"
                    android:contentDescription="@string/category2" />

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/category2"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/category3"
                android:layout_width="139dp"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/round_color"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/camping"
                    android:contentDescription="@string/category3" />

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/category3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>